--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 #spring.security.user.password=${SECURITY_PASSWORD:12345}
 logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
 
+spring.config.import = application_prod.properties
+spring.profiles.active = prod
+
 spring.datasource.url=jdbc:mysql://127.0.0.1:64242/eazybank?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
