--- a/src/main/resources/application_prod.properties
+++ b/src/main/resources/application_prod.properties
@@ -13,3 +13,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+
+server.servlet.session.timeout=${SESSION_TIMEOUT:1m}
